updated docker-compose to run with honeyclient. The default docker-compose.yml file will run using images on Docker Hub, gave optional instructions in the README to run from locally built images

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,12 +1,27 @@
+### Uses locally built images for each service
+
 version: "3"
 services:
   api:
-    image: csci4950tgt/api
+    build: ./api
     restart: always
-    # Need to wait for postgres to start
-    command: ["./wait-for-it.sh", "db:5432", "--", "./api"]
     ports:
       - 8080:8080
+    # Need to wait for postgres to start
+    command: ["./wait-for-it.sh", "db:5432", "--", "./api"]
+    depends_on:
+      - db
+    links:
+      - db
+    environment:
+      - PG_HOST=db
+
+  honeyclient:
+    build: ./honeyclient
+    restart: always
+    # Need to wait for postgres to start
+    ports:
+      - 8000:8000
     depends_on:
       - db
     links:
@@ -15,7 +30,7 @@ services:
       - PG_HOST=db
 
   frontend:
-    image: csci4950tgt/frontend
+    build: ./frontend
     restart: always
     ports:
       - 3000:80
@@ -32,9 +47,10 @@ services:
       - POSTGRES_PASSWORD=gorm
       - POSTGRES_DB=gorm
     ports:
+      # Map to localhost:5555 so no conflicts with local instance of postgres
       - 5555:5432
 
-  # Container to view db
+  # Container to interact with db
   adminer:
     image: adminer
     restart: always
