one really dumb error fix. just going to push this up directly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - PG_HOST=db
 
   honeyclient:
-    build: csci4950tgt/honeyclient
+    image: csci4950tgt/honeyclient
     restart: always
     ports:
       - 8000:8000
