docker-compose works again with honeyclient and api

--- a/.env.template
+++ b/.env.template
@@ -2,9 +2,12 @@
 GOOGLE_SAFE_BROWSING_API_KEY=
 
 # API
+PG_HOST=db
+PG_PORT=5432
+PG_PRODUCTION=false
 HONEYCLIENT_STUB=http://host.docker.internal:8000
 
-# DB
-POSTGRES_USER=gorm
-POSTGRES_PASSWORD=gorm
-POSTGRES_DB=gorm
+# API and Postgres
+PG_USER=gorm
+PG_PASSWORD=gorm
+PG_DB=gorm
