updated docker-compose.dev, docker-compose.yml, and readme

--- a/.env.template
+++ b/.env.template
@@ -1,13 +1,16 @@
 # Honeyclient
 GOOGLE_SAFE_BROWSING_API_KEY=
 
+# Frontend
+# API_STUB=http://localhost:8080/api
+
 # API
 PG_HOST=db
-PG_PORT=5432
-PG_PRODUCTION=false
+# PG_PORT=5432
+# PG_PRODUCTION=false
 HONEYCLIENT_STUB=http://host.docker.internal:8000
 
 # API and Postgres
-PG_USER=gorm
-PG_PASSWORD=gorm
-PG_DB=gorm
+# PG_USER=gorm
+# PG_PASSWORD=gorm
+# PG_DB=gorm
