--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -6,8 +6,6 @@ services:
     build:
       context: ./api
       dockerfile: Dockerfile.dev
-      # args:
-      # arg1:
     restart: always
     ports:
       - 8080:8080
@@ -19,11 +17,11 @@ services:
       - db
     environment:
       - PG_HOST=${PG_HOST}
-      - PG_PORT=${PG_PORT}
-      - PG_USER=${PG_USER}
-      - PG_PASSWORD=${PG_PASSWORD}
-      - PG_DB=${PG_DB}
-      - PG_PRODUCTION=${PG_PRODUCTION}
+      # - PG_PORT=${PG_PORT}
+      # - PG_USER=${PG_USER}
+      # - PG_PASSWORD=${PG_PASSWORD}
+      # - PG_DB=${PG_DB}
+      # - PG_PRODUCTION=${PG_PRODUCTION}
       - HONEYCLIENT_STUB=${HONEYCLIENT_STUB}
 
   honeyclient:
@@ -40,8 +38,8 @@ services:
     restart: always
     ports:
       - 3000:8080
-    environment:
-      - API_STUB=${API_STUB}
+    # environment:
+    #   - API_STUB=${API_STUB}
 
   db:
     image: postgres
@@ -50,10 +48,10 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     # Setup username, password, and database name
-    environment:
-      - POSTGRES_USER=${PG_USER}
-      - POSTGRES_PASSWORD=${PG_PASSWORD}
-      - POSTGRES_DB=${PG_DB}
+    # environment:
+    #   - PG_USER=${PG_USER}
+    #   - PG_PASSWORD=${PG_PASSWORD}
+    #   - PG_DB=${PG_DB}
     ports:
       # Map to localhost:5555 so no conflicts with local instance of postgres
       - 5555:5432
