--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,9 @@ services:
     image: csci4950tgt/frontend
     restart: always
     ports:
-      - 3000:80
+      - 3000:8080
+    # environment:
+    #   - API_STUB=${API_STUB}
 
   db:
     image: postgres
@@ -38,10 +40,10 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     # Setup username, password, and database name
-    environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+    # environment:
+    #   - PG_USER=${PG_USER}
+    #   - PG_PASSWORD=${PG_PASSWORD}
+    #   - PG_DB=${PG_DB}
     ports:
       - 5555:5432
 
